--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kuruma.kurumarket">
 
+    <!-- 디바이스의 현 상태 체크하는 권한 -->
+    <!-- <uses-permission android:name="android.permission.READ_PHONE_STATE"/> -->
+
     <application
         android:allowBackup="true"
         android:name=".CustomApplication"
-        android:icon="@drawable/app_icon"
+        android:icon="@drawable/kurumafox"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/app_icon"
+        android:roundIcon="@drawable/kurumafox"
         android:supportsRtl="true"
         android:theme="@style/Theme.KuruMarket">
         <activity android:name=".ViewPagerActivity"></activity>
@@ -29,6 +32,7 @@
         </service>
 
         <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+        <!-- Release AdMob app ID: ca-app-pub-6754052115866718~2762220518 -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713"/>
