--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kuruma.kurumarket">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".CustomApplication"
         android:allowBackup="true"
@@ -9,9 +11,9 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/kurumafox"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Design.Light"
-        >
-        <activity android:name=".SignupActivity"></activity>
+        android:theme="@style/Theme.Design.Light">
+        <activity android:name=".LoginActivity"/>
+        <activity android:name=".SignupActivity" />
         <activity android:name=".ViewPagerActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
