--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kuruma.kurumarket">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera2.CameraDevice.StateCallback"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
+
 
     <application
         android:name=".CustomApplication"
@@ -11,22 +17,23 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/kurumafox"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Design.Light">
-        <activity android:name=".WelcomeActivity"></activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".SignupActivity" />
-        <activity android:name=".ViewPagerActivity" />
-        <activity android:name=".SplashActivity">
+        android:theme="@style/Theme.Design.Light"
+        android:requestLegacyExternalStorage="true">
+        <activity android:name=".activity.WelcomeActivity"></activity>
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.SignupActivity" />
+        <activity android:name=".activity.GalleryActivity" />
+        <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PasswordResetActivity" />
-        <activity android:name=".MemberInitActivity" />
-        <activity android:name=".HistoryActivity" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".activity.CameraActivity" />
+        <activity android:name=".activity.PasswordResetActivity" />
+        <activity android:name=".activity.MemberInitActivity" />
+        <activity android:name=".activity.MainActivity" />
 
         <service android:name=".FirebaseMessagingService">
             <intent-filter>
