Upload Function Finish : possible to upload contents (ex text, video, photo) to firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
         <activity android:name=".activity.CameraActivity" />
         <activity android:name=".activity.PasswordResetActivity" />
         <activity android:name=".activity.MemberInitActivity" />
+        <activity android:name=".activity.WritePostActivity" />
+        <activity android:name=".activity.BasicActivity" />
         <activity android:name=".activity.MainActivity" />
 
         <service android:name=".FirebaseMessagingService">
