--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,9 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/kurumafox"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Design.Light"
+        android:theme="@style/Theme.KuruMarket"
         android:requestLegacyExternalStorage="true">
+        <activity android:name=".activity.PostActivity" />
         <activity android:name=".activity.WelcomeActivity"></activity>
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.SignupActivity" />
